--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,7 @@ header {
   justify-content: space-between;
   width: 100%;
   border-bottom: 2px solid black;
+  align-items: center;
 }
 
 .logo {
@@ -54,7 +55,6 @@ nav ul span {
 /* Main Content */
 .container {
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
   margin: 0 auto;
   align-items: stretch;
@@ -259,10 +259,6 @@ footer {
    padding: 0 15px;
    list-style: none;
  }
-
-/*#copyright {
-  text-align: center;
-}*/
 
 #copyright p {
   text-align: center;
