--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -71,18 +71,21 @@ nav ul span {
   display: flex;
   flex-direction: column;
   width: 630px;
+  margin-right:20px;
 }
 
 .column.medium {
   display: flex;
   flex-direction: column;
   width: 300px;
+  margin: 0 10px;
 }
 
 .column.small {
   display: flex;
   flex-direction: column;
   width: 240px;
+  margin-left: 20px;
 }
 
 .column.small img {
